scroll on mobile causes ui problem in navbar menu issue solved

--- a/src/index.scss
+++ b/src/index.scss
@@ -84,8 +84,8 @@ section {
 .navbar {
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
+  height: 100dvh;
   width: 75%;
   display: flex;
   flex-direction: column;
